<resources>
    <string name="app_name">PicPartner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">808778816447833</string>
    <string name="fb_login_protocol_scheme">fb808778816447833</string>
    <string name="user_name">Name/UID: %1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="name">暱稱</string>
    <string name="email">Email</string>
    <string name="password">密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>

    <string-array name="identity">
        <item>模特兒</item>
        <item>攝影師</item>
    </string-array>
</resources>