<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignupTabFragment">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edit_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password_confirm"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>